first ipynb array test linking

--- a/05-data-structures-algorithms/basic-data-structures/arrays.ipynb
+++ b/05-data-structures-algorithms/basic-data-structures/arrays.ipynb
@@ -4,205 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arrays\n",
-    "\n",
-    "## Table of Contents\n",
-    "- [Overview](#overview)\n",
-    "- [Key Concepts](#key-concepts)\n",
-    "- [Theoretical Foundation](#theoretical-foundation)\n",
-    "- [Implementation Details](#implementation-details)\n",
-    "- [Best Practices](#best-practices)\n",
-    "- [Common Pitfalls](#common-pitfalls)\n",
-    "- [Advanced Topics](#advanced-topics)\n",
-    "- [Interview Questions](#interview-questions)\n",
-    "- [Real-world Applications](#real-world-applications)\n",
-    "- [Further Reading](#further-reading)\n",
-    "- [Related Topics](#related-topics)"
+    "# Arrays\n\n## Table of Contents\n- [Overview](#overview)\n- [Key Concepts](#key-concepts)\n- [Theoretical Foundation](#theoretical-foundation)\n- [Implementation Details](#implementation-details)\n- [Best Practices](#best-practices)\n- [Common Pitfalls](#common-pitfalls)\n- [Advanced Topics](#advanced-topics)\n- [Interview Questions](#interview-questions)\n- [Real-world Applications](#real-world-applications)\n- [Further Reading](#further-reading)\n- [Related Topics](#related-topics)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview\n",
-    "Arrays are a fundamental data structure in computer science. They are used to store a fixed-size sequential collection of elements of the same type. Arrays are widely used in various algorithms and data structures."
+    "## Overview\nArrays are a fundamental data structure in computer science. They are used to store a fixed-size sequential collection of elements of the same type. Arrays are widely used in various algorithms and data structures."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Key Concepts\n",
-    "- **Indexing**: Accessing elements by their position.\n",
-    "- **Fixed Size**: Arrays have a fixed size once declared.\n",
-    "- **Homogeneous**: All elements are of the same type.\n",
-    "- **Contiguous Memory**: Elements are stored in contiguous memory locations."
+    "## Key Concepts\n- **Indexing**: Accessing elements by their position.\n- **Fixed Size**: Arrays have a fixed size once declared.\n- **Homogeneous**: All elements are of the same type.\n- **Contiguous Memory**: Elements are stored in contiguous memory locations."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Theoretical Foundation\n",
-    "An array is a collection of elements identified by array indexes. Each element can be individually accessed, updated, or retrieved using its index."
+    "## Theoretical Foundation\nAn array is a collection of elements identified by array indexes. Each element can be individually accessed, updated, or retrieved using its index."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementation Details\n",
-    "Here's a simple implementation of an array in Python:\n",
-    "\n",
-    "```python\n",
-    "# Creating an array\n",
-    "array = [1, 2, 3, 4, 5]\n",
-    "\n",
-    "# Accessing elements\n",
-    "print(array[0])  # Output: 1\n",
-    "\n",
-    "# Updating elements\n",
-    "array[1] = 10\n",
-    "print(array)  # Output: [1, 10, 3, 4, 5]\n",
-    "\n",
-    "# Iterating through an array\n",
-    "for element in array:\n",
-    "    print(element)\n",
-    "```"
+    "## Implementation Details\nHere's a simple implementation of an array in Python:\n\n```python\n# Creating an array\narray = [1, 2, 3, 4, 5]\n\n# Accessing elements\nprint(array[0])  # Output: 1\n\n# Updating elements\narray[1] = 10\nprint(array)  # Output: [1, 10, 3, 4, 5]\n\n# Iterating through an array\nfor element in array:\n    print(element)\n```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Best Practices\n",
-    "- Use arrays when you need constant-time access to elements.\n",
-    "- Ensure the array size is appropriate for your use case.\n",
-    "- Avoid frequent resizing of arrays."
+    "## Best Practices\n- Use arrays when you need constant-time access to elements.\n- Ensure the array size is appropriate for your use case.\n- Avoid frequent resizing of arrays."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Common Pitfalls\n",
-    "- **Index Out of Bounds**: Accessing an index that does not exist.\n",
-    "- **Inefficient Insertions/Deletions**: Arrays are not efficient for frequent insertions and deletions.\n",
-    "- **Memory Usage**: Fixed-size arrays can lead to wasted memory if not fully utilized."
+    "## Common Pitfalls\n- **Index Out of Bounds**: Accessing an index that does not exist.\n- **Inefficient Insertions/Deletions**: Arrays are not efficient for frequent insertions and deletions.\n- **Memory Usage**: Fixed-size arrays can lead to wasted memory if not fully utilized."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced Topics\n",
-    "- **Multi-dimensional Arrays**: Arrays within arrays.\n",
-    "- **Sparse Arrays**: Efficient storage for arrays with many zero values.\n",
-    "- **Dynamic Arrays**: Arrays that can resize themselves."
+    "## Advanced Topics\n- **Multi-dimensional Arrays**: Arrays within arrays.\n- **Sparse Arrays**: Efficient storage for arrays with many zero values.\n- **Dynamic Arrays**: Arrays that can resize themselves."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interview Questions\n",
-    "\n",
-    "1. **Question**: How do you find the maximum element in an array?\n",
-    "   **Answer**: Iterate through the array and keep track of the maximum element.\n",
-    "   ```python\n",
-    "   def find_max(array):\n",
-    "       max_element = array[0]\n",
-    "       for element in array:\n",
-    "           if element > max_element:\n",
-    "               max_element = element\n",
-    "       return max_element\n",
-    "   ```\n",
-    "\n",
-    "2. **Question**: How do you reverse an array?\n",
-    "   **Answer**: Use a two-pointer approach.\n",
-    "   ```python\n",
-    "   def reverse_array(array):\n",
-    "       left, right = 0, len(array) - 1\n",
-    "       while left < right:\n",
-    "           array[left], array[right] = array[right], array[left]\n",
-    "           left += 1\n",
-    "           right -= 1\n",
-    "       return array\n",
-    "   ```\n",
-    "\n",
-    "3. **Question**: How do you find the second largest element in an array?\n",
-    "   **Answer**: Iterate through the array and keep track of the largest and second largest elements.\n",
-    "   ```python\n",
-    "   def find_second_largest(array):\n",
-    "       if len(array) < 2:\n",
-    "           return None\n",
-    "       largest = second_largest = float('-inf')\n",
-    "       for element in array:\n",
-    "           if element > largest:\n",
-    "               second_largest = largest\n",
-    "               largest = element\n",
-    "           elif element > second_largest and element != largest:\n",
-    "               second_largest = element\n",
-    "       return second_largest if second_largest != float('-inf') else None\n",
-    "   ```\n",
-    "\n",
-    "4. **Question**: How do you check if an array contains a pair of elements that sum to a given value?\n",
-    "   **Answer**: Use a hash set to track seen elements.\n",
-    "   ```python\n",
-    "   def has_pair_with_sum(array, target_sum):\n",
-    "       seen = set()\n",
-    "       for element in array:\n",
-    "           complement = target_sum - element\n",
-    "           if complement in seen:\n",
-    "               return True\n",
-    "           seen.add(element)\n",
-    "       return False\n",
-    "   ```\n",
-    "\n",
-    "5. **Question**: How do you rotate an array by k positions to the right?\n",
-    "   **Answer**: Use slicing to achieve the rotation.\n",
-    "   ```python\n",
-    "   def rotate_array(array, k):\n",
-    "       k = k % len(array)\n",
-    "       return array[-k:] + array[:-k]\n",
-    "   ```"
+    "## Interview Questions\n\n1. **Question**: How do you find the maximum element in an array?\n   **Answer**: Iterate through the array and keep track of the maximum element.\n   ```python\n   def find_max(array):\n       max_element = array[0]\n       for element in array:\n           if element > max_element:\n               max_element = element\n       return max_element\n   ```\n\n2. **Question**: How do you reverse an array?\n   **Answer**: Use a two-pointer approach.\n   ```python\n   def reverse_array(array):\n       left, right = 0, len(array) - 1\n       while left < right:\n           array[left], array[right] = array[right], array[left]\n           left += 1\n           right -= 1\n       return array\n   ```\n\n3. **Question**: How do you find the second largest element in an array?\n   **Answer**: Iterate through the array and keep track of the largest and second largest elements.\n   ```python\n   def find_second_largest(array):\n       if len(array) < 2:\n           return None\n       largest = second_largest = float('-inf')\n       for element in array:\n           if element > largest:\n               second_largest = largest\n               largest = element\n           elif element > second_largest and element != largest:\n               second_largest = element\n       return second_largest if second_largest != float('-inf') else None\n   ```\n\n4. **Question**: How do you check if an array contains a pair of elements that sum to a given value?\n   **Answer**: Use a hash set to track seen elements.\n   ```python\n   def has_pair_with_sum(array, target_sum):\n       seen = set()\n       for element in array:\n           complement = target_sum - element\n           if complement in seen:\n               return True\n           seen.add(element)\n       return False\n   ```\n\n5. **Question**: How do you rotate an array by k positions to the right?\n   **Answer**: Use slicing to achieve the rotation.\n   ```python\n   def rotate_array(array, k):\n       k = k % len(array)\n       return array[-k:] + array[:-k]\n   ```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Real-world Applications\n",
-    "- **Database Indexing**: Arrays are used to implement indexing in databases.\n",
-    "- **Graphics**: Arrays are used to store pixel data in images.\n",
-    "- **Networking**: Arrays are used to store packet data in network buffers."
+    "## Real-world Applications\n- **Database Indexing**: Arrays are used to implement indexing in databases.\n- **Graphics**: Arrays are used to store pixel data in images.\n- **Networking**: Arrays are used to store packet data in network buffers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Further Reading\n",
-    "- [Array Data Structure on GeeksforGeeks](https://www.geeksforgeeks.org/array-data-structure/)\n",
-    "- [Arrays in Python Documentation](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
+    "## Further Reading\n- [Array Data Structure on GeeksforGeeks](https://www.geeksforgeeks.org/array-data-structure/)\n- [Arrays in Python Documentation](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Related Topics\n",
-    "- [Linked Lists](../linked-lists.ipynb)\n",
-    "- [Stacks](../stacks.ipynb)\n",
-    "- [Queues](../queues.ipynb)"
+    "## Related Topics\n- [Linked Lists](../linked-lists.ipynb)\n- [Stacks](../stacks.ipynb)\n- [Queues](../queues.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,9 +101,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
